# archon

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  QUICKSTART.md  README.md  RELEASE_NOTES.md  cliff.toml  install.sh
.github/workflows/: ci.yml  release.yml
crates/arch-tool-adr/: Cargo.toml
crates/arch-tool-adr/src/: exception.rs  lib.rs  model.rs  numbering.rs
crates/arch-tool-ai/: Cargo.toml
crates/arch-tool-ai/src/: context.rs  decide.rs  doc_selection.rs  fill.rs
crates/arch-tool-cli/: Cargo.toml
crates/arch-tool-cli/src/: app.rs  main.rs
crates/arch-tool-cli/src/commands/: adr.rs  bootstrap.rs  decide.rs  exception.rs  init.rs  mod.rs  status.rs  sync.rs  verify.rs
crates/arch-tool-core/: Cargo.toml
crates/arch-tool-core/src/: error.rs  paths.rs  repo_meta.rs
crates/arch-tool-graph/: Cargo.toml
crates/arch-tool-policy/: Cargo.toml
crates/arch-tool-policy/src/: builtin.rs  evaluator.rs  lib.rs
crates/arch-tool-server/: Cargo.toml
crates/arch-tool-server/src/: lib.rs  main.rs
crates/arch-tool-sync/: Cargo.toml
crates/arch-tool-sync/src/: engine.rs  lib.rs  manifest.rs  sections.rs  state.rs
crates/arch-tool-templates/: Cargo.toml
crates/arch-tool-templates/templates/init/: AGENTS.md.tpl  CLAUDE.md.tpl  architecture.md.tpl  development.md.tpl
crates/arch-tool-verify/: Cargo.toml
crates/arch-tool-verify/src/: lib.rs  policy_checks.rs  report.rs  runner.rs
crates/archon-adr/: Cargo.toml
crates/archon-adr/src/: create.rs  exception.rs
crates/archon-ai/: Cargo.toml
crates/archon-ai/src/: auth.rs  backend.rs  generate.rs  lib.rs  merge.rs
crates/archon-cli/: Cargo.toml
crates/archon-cli/src/: app.rs  main.rs  output.rs
crates/archon-cli/src/commands/: adr.rs  auth.rs  bootstrap.rs  decide.rs  exception.rs  generate.rs  init.rs  mod.rs  status.rs  sync.rs  verify.rs
crates/archon-core/: Cargo.toml
crates/archon-core/src/: error.rs  lib.rs  paths.rs  profile.rs  standards_version.rs
crates/archon-graph/: Cargo.toml
crates/archon-graph/src/: lib.rs
crates/archon-policy/: Cargo.toml
crates/archon-policy/src/: evaluator.rs  loader.rs  model.rs
crates/archon-server/: Cargo.toml
crates/archon-server/src/: main.rs
crates/archon-sync/: Cargo.toml
crates/archon-sync/src/: engine.rs  hasher.rs  manifest.rs  sections.rs  state.rs
crates/archon-templates/: Cargo.toml
crates/archon-templates/src/: lib.rs  renderer.rs  tera_renderer.rs
crates/archon-templates/templates/: hologram.repo.yaml.tpl
crates/archon-templates/templates/generate/: adr.md.tera  plan.md.tera  prompt.md.tera  spec.md.tera
crates/archon-templates/templates/init/: AGENTS.md.tpl
crates/archon-verify/: Cargo.toml
crates/archon-verify/src/: policy_checks.rs  report.rs  runner.rs  structural.rs
specs/: SPRINT.md
specs/prompts/: 0001-init.md
specs/sprints/: 001-phase1-mvp.md
src/: broadcast.rs  context.rs  extract.rs  graph.rs  inject.rs  main.rs  manifest.rs  render.rs
src/dashboard/: app.rs  event_handler.rs  mod.rs  ui.rs  web.rs
