[workspace]
resolver = "2"
members = [
    "crates/archon-cli",
    "crates/archon-core",
    "crates/archon-policy",
    "crates/archon-verify",
    "crates/archon-sync",
    "crates/archon-adr",
    "crates/archon-graph",
    "crates/archon-templates",
    "crates/archon-server",
    "crates/archon-ai",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive", "color"] }
colored = "2"
glob = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

archon-core = { path = "crates/archon-core" }
archon-policy = { path = "crates/archon-policy" }
archon-verify = { path = "crates/archon-verify" }
archon-sync = { path = "crates/archon-sync" }
archon-adr = { path = "crates/archon-adr" }
archon-graph = { path = "crates/archon-graph" }
archon-templates = { path = "crates/archon-templates" }
archon-server = { path = "crates/archon-server" }
archon-ai = { path = "crates/archon-ai" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
inquire = "0.7"
indicatif = "0.17"
tera = "1"
