[package]
name = "archon"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Lightweight dependency graph and AI context generator for multi-repo ecosystems"

[[bin]]
name = "archon"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "color"] }
colored = "2"
chrono = { version = "0.4", features = ["clock"] }
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
walkdir = "2"
inquire = "0.7"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
