[package]
name = "arch-tool-adr"
description = "ADR and exception management for arch-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arch-tool-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
