[package]
name = "arch-tool-ai"
description = "AI backend integration for arch-tool — doc selection, TODO filling, merge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arch-tool-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
glob.workspace = true
chrono.workspace = true
reqwest.workspace = true
