[package]
name = "arch-tool-cli"
description = "CLI binary for arch-tool architecture governance tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arch-tool"
path = "src/main.rs"

[dependencies]
arch-tool-core.workspace = true
arch-tool-policy.workspace = true
arch-tool-verify.workspace = true
arch-tool-templates.workspace = true
arch-tool-ai.workspace = true
arch-tool-sync.workspace = true
arch-tool-adr.workspace = true
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
