[package]
name = "arch-tool-graph"
description = "Dependency and contract graph reporting for arch-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arch-tool-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
