[package]
name = "arch-tool-policy"
description = "Machine-readable policy loading and evaluation for arch-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arch-tool-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
