[package]
name = "arch-tool-server"
description = "HTTP server for arch-tool governance queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arch-tool-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
arch-tool-core.workspace = true
arch-tool-policy.workspace = true
arch-tool-verify.workspace = true
arch-tool-graph.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
