[package]
name = "arch-tool-templates"
description = "Template system for init and doc generation in arch-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arch-tool-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
