[package]
name = "arch-tool-verify"
description = "Conformance checking engine for arch-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arch-tool-core.workspace = true
arch-tool-policy.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
anyhow.workspace = true
colored.workspace = true

[dev-dependencies]
tempfile.workspace = true
