[package]
name = "archon-ai"
description = "AI backend integration for archon — doc selection, TODO filling, merge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archon-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
glob.workspace = true
chrono.workspace = true
reqwest.workspace = true
