[package]
name = "archon-cli"
description = "CLI binary for archon architecture governance tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "archon"
path = "src/main.rs"

[dependencies]
archon-core.workspace = true
archon-policy.workspace = true
archon-verify.workspace = true
archon-templates.workspace = true
archon-ai.workspace = true
archon-sync.workspace = true
archon-adr.workspace = true
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
inquire.workspace = true
indicatif.workspace = true
chrono.workspace = true
tera.workspace = true

[dev-dependencies]
tempfile.workspace = true
