[package]
name = "archon-policy"
description = "Machine-readable policy loading and evaluation for archon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archon-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
