[package]
name = "archon-server"
description = "HTTP server for archon governance queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "archon-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
archon-core.workspace = true
archon-policy.workspace = true
archon-verify.workspace = true
archon-graph.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
