[package]
name = "archon-sync"
description = "File sync engine with managed sections for archon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archon-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
sha2.workspace = true
colored.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
