[package]
name = "archon-templates"
description = "Template system for init and doc generation in archon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archon-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tera.workspace = true
